feat: 고정 일정 로직 및 색상표 추가
